static/main.css
/* ... */
@keyframes floating {
    0% {
        transform: translate(0, 0)
    }

    50% {
        transform: translate(0, 10px)
    }

    100% {
        transform: translate(0, 0)
    }
}

@keyframes showbanner {
    0% {
        top: 0;
        background: var(--heo-theme)
    }

    30% {
        top: 60px
    }

    80% {
        background: var(--heo-theme)
    }

    100% {
        background: var(--heo-secondbg)
    }
}

@keyframes showbannertext {
    0% {
        color: var(--heo-white)
    }

    80% {
        color: var(--heo-white)
    }

    100% {
        color: var(--heo-fontcolor)
    }
}

body {
    background: var(--heo-card-bg);
    display: flex;
    margin: auto;
    flex-direction: column;
    font-family: PingFangSC-Regular, Roboto, Helvetica Neue, Helvetica, Tahoma, Arial, PingFang SC-Light, Microsoft YaHei;
    align-items: center;
    width: 100%
}

body .need-padding {
    max-width: 1200px;
    width: 90%;
    z-index: 1
}

a {
    text-decoration: none;
    -webkit-user-drag: none
}

span {
    user-select: none
}

sup {
    font-size: 12px;
    background: var(--heo-green);
    color: var(--heo-white);
    padding: 4px;
    border-radius: 4px;
    margin-left: 6px;
    white-space: nowrap;
    position: absolute;
    top: -4px
}

sup.hot {
    background: var(--heo-red)
}

sup.error {
    background: var(--heo-gray)
}

img {
    user-select: none;
    -webkit-user-drag: none
}

.nav {
    display: flex;
    width: 100%;
    left: 0;
    position: fixed;
    justify-content: center;
    flex-direction: column;
    background: var(--heo-navbg);
    align-items: center;
    z-index: 2;
    transition: ease-in-out .3s;
    backdrop-filter: blur(10px)
}

.nav.top {
    background: var(--heo-card-bg)
}

.nav.top .nav-item {
    color: var(--heo-fontcolor)
}

.nav-content {
    max-width: 1200px;
    width: 90%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 60px;
    z-index: 2;
    transition: ease-in-out .3s
}

.nav-center {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.nav-banner {
    width: 100%;
    height: 44px;
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    top: 60px;
    left: 0;
    animation: showbanner 4s ease-in-out;
    z-index: 1;
    background: var(--heo-secondbg)
}

.nav-banner a {
    font-size: 12px;
    transition: ease-in-out .3s;
    animation: showbannertext 4s ease-in-out;
    color: var(--heo-fontcolor)
}

.nav-banner a:hover {
    color: var(--heo-theme)
}

.nav-right .nav-menu {
    display: none
}

a.site-logo {
    display: flex;
    align-items: center
}

.site-logo-img {
    width: 25px !important;
    height: 25px !important
}

.menu-list {
    display: none
}

.banner-img {
    width: 405px;
    max-width: 100%;
    pointer-events: none;
    object-fit: fill;
    transform: translate(0, -7px);
    max-width: 90%;
    filter: drop-shadow(2px 4px 8px #f7d1685a)
}

a.right-stack {
    display: flex;
    justify-content: center;
    min-height: 400px
}

span.site-name {
    color: var(--heo-white);
    font-size: 14px;
    margin-left: 8px
}

.nav.top span.site-name {
    color: var(--heo-fontcolor)
}

.nav-item {
    color: var(--heo-white);
    opacity: .8;
    transition: ease-in-out .3s;
    font-size: 14px;
    margin: 0 2px;
    padding: 4px 8px;
    border-radius: 16px
}

.nav-item:hover {
    opacity: 1;
    background: var(--heo-card-bg);
    color: var(--heo-fontcolor)
}

.nav.top .nav-item:hover {
    background: var(--heo-secondbg)
}

.nav-right {
    display: flex;
    align-items: center
}

.first-stack {
    display: flex;
    justify-content: space-between;
    margin-top: 180px;
    margin-bottom: 120px;
    align-items: center
}

.title-group {
    display: flex;
    flex-direction: column;
    font-size: 68px;
    font-weight: 400;
    color: #00001e;
    line-height: 75px;
    font-weight: 700;
    font-family: system-ui;
    letter-spacing: 0;
    line-height: 75px;
    text-shadow: 0 9px 41px rgba(0, 0, 0, .12)
}

span.discription-text {
    display: block;
    font-size: 28px;
    font-weight: 400;
    color: #00001e;
    line-height: 34px;
    margin-top: 28px;
    font-weight: 700
}

a.about-button {
    display: flex;
    padding: 11px 21px;
    background: var(--heo-card-btn-bg);
    color: var(--heo-white);
    border-radius: 29px;
    box-shadow: 0 12px 12px -9px rgba(0, 0, 0, .29);
    margin-top: 64px;
    width: fit-content;
    transition: ease-in-out .3s;
    white-space: nowrap;
    align-items: center;
    justify-content: center
}

a.about-button:hover {
    background: var(--heo-main);
    box-shadow: 0 12px 12px -9px rgba(5, 51, 137, .29)
}

.about-button.social-button:hover {
    border-color: var(--heo-main);
    color: var(--heo-white)
}

.product-group {
    margin: 0;
    width: 100%
}

h2.group-title {
    font-size: 64;
    margin-bottom: 0
}

.group-description {
    font-size: 14px;
    color: var(--heo-secondtext)
}

.group-items {
    display: flex;
    margin-top: 60px;
    flex-direction: row;
    flex-wrap: wrap
}

.group-item {
    display: flex;
    width: calc(100% / 3);
    margin-bottom: 60px
}

a.group-item-icon {
    width: 100px;
    height: 100px;
    display: flex;
    align-items: center;
    user-select: none
}

.group-item-icon-img {
    width: 100px;
    height: 100px;
    border-radius: 28px;
    filter: drop-shadow(2px 4px 8px #100c2610)
}

.group-item-icon-img.error {
    filter: grayscale(100%)
}

.group-info-button {
    display: flex;
    align-items: center
}

span.linkbotton-tips {
    display: flex;
    margin-left: 10px;
    font-size: 12px;
    color: var(--heo-secondtext)
}
/* ... */

